# ESMFIO

./: .gitmodules  BUGFIX_RESOLUTION.md  CMakeLists.txt  CTestConfig.cmake  README.md  benchmark.sh  build.sh  mkdocs.yml
cmake/: ESMF_IOConfig.cmake.in
docs/: README.md  build_docs.sh  index.md  requirements.txt
docs/developer/: api_reference.md  architecture.md  contributing.md  implementation.md  testing.md
docs/reference/: configuration_parameters.md  esmf_integration.md  module_dependencies.md  nuopc_integration.md
docs/release/: installation.md  license.md  system_requirements.md
docs/technical/: data_flow.md  error_handling.md  memory_management.md  parallel_io.md  performance_analysis.md
docs/user/: configuration_guide.md  examples.md  getting_started.md
examples/: CMakeLists.txt  esmf_io_config_example_updated.rc
examples/SingleModelESMFIODemo/: CMakeLists.txt  Driver.F90  README.md  run.seq  run_example.sh  user_nl_esmf_io
src/: CMakeLists.txt  ESMF_IO_Cap.F90  ESMF_IO_Component_Mod.F90  ESMF_IO_Config_Mod.F90  ESMF_IO_Config_Params_Mod.F90  ESMF_IO_Grid_Config_Mod.F90  ESMF_IO_Input_Mod.F90  ESMF_IO_NUOPC_Mod.F90  ESMF_IO_Output_Mod.F90  ESMF_IO_Parallel_Mod.F90
tests/: CMakeLists.txt  create_test_data.sh  run_nuopc_test.F90  test_ESMF_IO_Component_Mod.F90  test_ESMF_IO_Config_Mod.F90  test_ESMF_IO_Input_Mod.F90  test_ESMF_IO_Output_Mod.F90  test_ESMF_IO_Parallel_Mod.F90  test_config.rc  test_config.yaml  test_data_generator.py  test_pipeline.sh  test_runner.F90  verify_output.py
ush/: detect-machine.sh  module-setup.sh
